# Talk-With-Your-PDF

./: README.md  pyproject.toml
learnfromyourpdf/: frontend.py  main.py
